qt/quick/gen_qsgmaterialshader.h

class QSGMaterial;
class QSGMaterialShader;
typedef QSGMaterialShader::RenderState QSGMaterialShader__RenderState;
class QSGMaterialShader__RenderState;
typedef struct QMatrix4x4 QMatrix4x4;
typedef struct QRect QRect;
typedef struct QSGMaterial QSGMaterial;
typedef struct QSGMaterialShader QSGMaterialShader;
typedef struct QSGMaterialShader__RenderState QSGMaterialShader__RenderState;
QSGMaterialShader* QSGMaterialShader_new();
void QSGMaterialShader_activate(QSGMaterialShader* self);
void QSGMaterialShader_deactivate(QSGMaterialShader* self);
void QSGMaterialShader_updateState(QSGMaterialShader* self, QSGMaterialShader__RenderState* state, QSGMaterial* newMaterial, QSGMaterial* oldMaterial);
const char** QSGMaterialShader_attributeNames(const QSGMaterialShader* self);
bool QSGMaterialShader_override_virtual_activate(void* self, intptr_t slot);
void QSGMaterialShader_virtualbase_activate(void* self);
bool QSGMaterialShader_override_virtual_deactivate(void* self, intptr_t slot);
void QSGMaterialShader_virtualbase_deactivate(void* self);
bool QSGMaterialShader_override_virtual_updateState(void* self, intptr_t slot);
void QSGMaterialShader_virtualbase_updateState(void* self, QSGMaterialShader__RenderState* state, QSGMaterial* newMaterial, QSGMaterial* oldMaterial);
bool QSGMaterialShader_override_virtual_attributeNames(void* self, intptr_t slot);
bool QSGMaterialShader_override_virtual_compile(void* self, intptr_t slot);
void QSGMaterialShader_virtualbase_compile(void* self);
bool QSGMaterialShader_override_virtual_initialize(void* self, intptr_t slot);
void QSGMaterialShader_virtualbase_initialize(void* self);
bool QSGMaterialShader_override_virtual_vertexShader(void* self, intptr_t slot);
const char* QSGMaterialShader_virtualbase_vertexShader(const void* self);
bool QSGMaterialShader_override_virtual_fragmentShader(void* self, intptr_t slot);
const char* QSGMaterialShader_virtualbase_fragmentShader(const void* self);
void QSGMaterialShader_delete(QSGMaterialShader* self);
int QSGMaterialShader__RenderState_dirtyStates(const QSGMaterialShader__RenderState* self);
bool QSGMaterialShader__RenderState_isMatrixDirty(const QSGMaterialShader__RenderState* self);
bool QSGMaterialShader__RenderState_isOpacityDirty(const QSGMaterialShader__RenderState* self);
bool QSGMaterialShader__RenderState_isCachedMaterialDataDirty(const QSGMaterialShader__RenderState* self);
float QSGMaterialShader__RenderState_opacity(const QSGMaterialShader__RenderState* self);
QMatrix4x4* QSGMaterialShader__RenderState_combinedMatrix(const QSGMaterialShader__RenderState* self);
QMatrix4x4* QSGMaterialShader__RenderState_modelViewMatrix(const QSGMaterialShader__RenderState* self);
QMatrix4x4* QSGMaterialShader__RenderState_projectionMatrix(const QSGMaterialShader__RenderState* self);
QRect* QSGMaterialShader__RenderState_viewportRect(const QSGMaterialShader__RenderState* self);
QRect* QSGMaterialShader__RenderState_deviceRect(const QSGMaterialShader__RenderState* self);
float QSGMaterialShader__RenderState_determinant(const QSGMaterialShader__RenderState* self);
float QSGMaterialShader__RenderState_devicePixelRatio(const QSGMaterialShader__RenderState* self);
void QSGMaterialShader__RenderState_delete(QSGMaterialShader__RenderState* self);